   as CLI command 'logger rotate'

 * New AMI Actions FAXSessions, FAXSession, and FAXStats replicate the
   functionality of CLI commands 'fax show sessions', 'fax show session',
   and fax show stats' respectively.

 * New AMI actions PRIDebugSet, PRIDebugFileSet, and PRIDebugFileUnset
   enable manager control over PRI debugging levels and file output.

cdr_sqlite
-----------------
 * This module was deprecated and has been removed. Users of cdr_sqlite
   should use cdr_sqlite3_custom.

cdr_pgsql
------------------
 * Added the ability to support PostgreSQL application_name on connections.
   This allows PostgreSQL to display the configured name in the
   pg_stat_activity view and CSV log entries. This setting is configurable
   for cdr_pgsql via the appname configuration setting in cdr_pgsql.conf.

cel_pgsql
------------------
 * Added the ability to support PostgreSQL application_name on connections.
   This allows PostgreSQL to display the configured name in the
   pg_stat_activity view and CSV log entries. This setting is configurable
   for cel_pgsql via the appname configuration setting in cel_pgsql.conf.

CEL
------------------
 * The "bridge_technology" extra field key has been added to BRIDGE_ENTER
   and BRIDGE_EXIT events.

chan_dahdi
------------------
 * SS7 support now requires libss7 v2.0 or later.

 * Added SS7 support for connected line and redirecting.

 * Most SS7 CLI commands are reworked as well as new SS7 commands added.
   See online CLI help.

 * Added several SS7 config option parameters described in
   chan_dahdi.conf.sample.

chan_gtalk
------------------
 * This module was deprecated and has been removed. Users of chan_gtalk
   should use chan_motif.

chan_h323
------------------
 * This module was deprecated and has been removed. Users of chan_h323
   should use chan_ooh323.

chan_jingle
------------------
 * This module was deprecated and has been removed. Users of chan_jingle
   should use chan_motif.

chan_sip
------------------